# PegasOS

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  bochsrc  boot.asm  bootloader.c  connect_gdb.gdb  gdt.asm  lm.asm  pm.asm  print.asm  print32.asm  qemu.gdb  qemu_win.gdb  qemu_wsl.gdb  rm.asm  use_this_in_gdb
doxygen/: CMakeLists.txt  main.dox
iso/: CMakeLists.txt  grub.cfg
kernel/: CMakeLists.txt  grub.cfg  kernel.dox  kernel.ld  kernel.lds.S  kernel32.c  main.cpp
kernel/arch/x86/: boot.asm
kernel/arch/x86/boot/: boot.S  startup32.cpp
kernel/arch/x86_64/: CMakeLists.txt  console.cpp  init.cpp  kernel.ld  mmu.cpp  mp.cpp  x86_64.dox
kernel/arch/x86_64/boot/: boot.S  console32.S  early_entry.cpp  screen32.S  startup32.cpp
kernel/arch/x86_64/include/arch/: arch.h  console.h  image.h  kernel_addrspace.h  kernel_vspace.h
kernel/arch/x86_64/include/arch/x86_64/: control_regs.h  cpuid.h  gdt.h  ioport.h  mmu.h  mmu_constants.h  mp.h  multiboot2.h  paging.h
kernel/include/: asm.h  intellisense_workaround.h  multiboot2.h  stdint.h  string.h
kernel/include/ksl/: iterator.h
kernel/include/lib/: log.h
kernel/include/mm/: bootheap.h  kern_layout.h  phys.h  types.h
kernel/lib/: CMakeLists.txt  log.cpp  string.cpp
kernel/lib/libc/: CMakeLists.txt  libc.dox  string.cpp
kernel/mm/: CMakeLists.txt  bootheap.cpp  kern_layout.cpp  mm.dox  phys.cpp
psl/: CMakeLists.txt  format.dox  psl.dox
psl/include/psl/: algorithm.h  byte.h  charconv.h  format.h  iterator.h  numeric.h  span.h  string_view.h  type_traits.h  util.h
toolchain/x86_64/: common.cmake  gcc.cmake
