CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

project(PegasOS CXX ASM)

cmake_policy(SET CMP0076 NEW)

set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
set(CMAKE_ASM_FLAGS_DEBUG "-g")

set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")
set(CMAKE_ASM_FLAGS_RELWITHDEBINFO "-g")

set(CMAKE_CXX_FLAGS_MINSIZEREL "-Os")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wextra)

add_subdirectory(kernel)
add_subdirectory(iso)
